public/css/feed.css
@media (min-width: 60em) {
  .article-list-view {
    -webkit-align-items: flex-start;
    align-items: flex-start;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    flex-direction: row;
  }

  .article-list-view .article-list {
    flex: 1 0 0;
    min-width: 16em;
  }

  .article-list-view .article-pane {
    flex: 4 0 0;
  }
}


.article-list {
  position: relative;
  width: auto;
}

.article-list .feed {
  width: 100%;
  color: #fff;
  text-align: left;
  display: block;
  padding: 1em 0;
  position: relative;
}

.article-list .feed .icon {
  vertical-align: middle;
  padding-left: 1em;
  max-height: 1em;
}

.article-list .feed .name {
  color: #fff;
  display: block;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  width: 100%;
}

.article-list .feed .name span {
  vertical-align: middle;
}

.article-list .feed .unreads {
  display: inline-block;
  width: auto;
  position: absolute;
  right: 2.5em;
  top: 50%;
  line-height: 0;
}

.article-list .filters {
  position: relative;
  text-align: right;
  padding: 0.5em 1em;
  color: #fff;
}

.article-list .filters:before {
  content: 'Filter by: ';
  position: absolute;
  left: 1em;
}

.article-list .filter-bar .filters .active-filter {
  font-weight: bold;
}

.article-list ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.article-list ul li {
  position: relative;
}

.article-list ul li:nth-child(even) {
  background: #ecf0f1;
}

.article-list ul .unread:before {
  position: absolute;
  content: '';
  top: 20%;
  left: 0;
  width: 0.2em;
  height: 60%;
  background: #1abc9c;
}

.article-list ul li a {
  border-bottom: 1px solid #bdc3c7;
  padding: 1em;
  display: block;
  color: #34495e;
}

@media (min-width: 60em) {
  .article-list ul li a {
    border-right: 1px solid #bdc3c7;
  }
}

.article-list ul li a .pub-date,
.article-list ul li a .h6,
.article-list ul li a .summary {
  display: block;
}

.article-list ul li a .summary {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

